# rustploy

./: .gitignore  .luaurc  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  Makefile  README.md  install.sh  measure_ram.sh  rustploy  rustployd
crates/client/: Cargo.toml
crates/client/src/: app.rs  cli.rs  events.rs  main.rs  models.rs  transport.rs
crates/client/src/templates/: catalog.rs  mod.rs
crates/client/src/templates/entries/: ackee.rs  activepieces.rs  actual_budget.rs  adguard_home.rs  adminer.rs  anythingllm.rs  appwrite.rs  arangodb.rs  audiobookshelf.rs  authelia.rs  authentik.rs  azuracast.rs  backrest.rs  baikal.rs  baserow.rs  beszel.rs  bookstack.rs  botpress.rs  browserless.rs  budibase.rs  bytebase.rs  bytestash.rs  calibre.rs  calibre_web.rs  change_detection.rs  chatwoot.rs  classicpress.rs  clickhouse.rs  cloudflared.rs  conduit.rs  couchdb.rs  crowdsec.rs  cyberchef.rs  dashy.rs  directus.rs  docker_registry.rs  docmost.rs  dolibarr.rs  dozzle.rs  dragonfly.rs  (+127 more)
crates/client/src/ui/: dashboard.rs  deploy_engine.rs  deploy_log.rs  docker_cleanup.rs  home_deployments.rs  metrics.rs  mod.rs  projects.rs  service_detail.rs  settings.rs  sidebar.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: env_backup.rs  event_bus.rs  firewall.rs  health.rs  logs.rs  main.rs  metrics.rs  ports.rs  secrets.rs  watchdog.rs
crates/daemon/src/api/: deployments.rs  http_api.rs  mod.rs  projects.rs  public_routes.rs  routes.rs  server.rs  services.rs  stream.rs  webhook_server.rs
crates/daemon/src/api/handlers/: daemon_status.rs  deploy_abort.rs  deploy_delete.rs  deploy_engine_status.rs  deploy_history.rs  deploy_queue_pause.rs  deploy_queue_promote.rs  deploy_queue_reorder.rs  deploy_rollback.rs  deploy_start.rs  docker_inventory.rs  docker_prune.rs  docker_remove.rs  env_backup.rs  get_build_logs.rs  get_daemon_settings.rs  get_job_logs.rs  get_webhook_url.rs  git_branch_list.rs  git_oauth_start.rs  mod.rs  (+39 more)
crates/daemon/src/db/: build_logs.rs  daemon_settings.rs  deployments.rs  event_log.rs  git_providers.rs  job.rs  job_log.rs  job_run.rs  mod.rs  projects.rs  registry.rs  registry_tokens.rs  services.rs  webhook_tokens.rs
crates/daemon/src/deploy/: env_resolve.rs  executor.rs  git.rs  mod.rs  queue.rs  recovery.rs
crates/daemon/src/docker/: compose.rs  containers.rs  images.rs  mod.rs  networks.rs
crates/daemon/src/git_providers/: gitea.rs  github.rs  mod.rs
crates/daemon/src/ingress/: mod.rs  proxy.rs  router.rs  tls.rs
crates/daemon/src/jobs/: runner.rs  scheduler.rs
crates/daemon/src/registry/: auth.rs  error.rs  gc.rs  http.rs  internal_token.rs  mod.rs  name.rs  storage.rs
crates/daemon/src/rwp/: mod.rs  server.rs
crates/fw-helper/: Cargo.toml
crates/importer/: Cargo.toml
crates/importer/src/: main.rs  warnings.rs
crates/importer/src/sink/: mod.rs
crates/importer/src/source/: dokploy.rs  mod.rs
crates/importer/src/transform/: dokploy.rs  mod.rs
crates/remote-client/: Cargo.toml
crates/remote-client/src/: main.rs  model.rs  rwp.rs  smoke.rs  store.rs  update.rs  worker.rs
crates/remote-client/src/view/: home.rs  mod.rs  projects.rs  service.rs  settings.rs  sidebar.rs  widgets.rs  wizard.rs
crates/remote-ui/: CONTINUE.md  Cargo.toml
crates/remote-ui/src/: app.rs  main.rs  net.rs  root.rs  rwp.rs  store.rs
crates/remote-ui/src/app/: mod.rs  net.rs  root.rs  rwp.rs  store.rs  wizard.rs
crates/remote-ui/styles/: app.gss  app.iss  theme.json
crates/remote-ui/templates/: app.kdl  app.xml  home.kdl  home.xml  login.kdl  login.xml  new_service.kdl  service.kdl  service.xml  shell.kdl  shell.xml
crates/remote-ui/templates/components/: loading_row.kdl  picker_row.kdl  project_card.kdl  service_card.kdl  stat_card.kdl  state_cell.kdl
crates/remote-ui/tests/: templates_render.rs
crates/rustploy-gui/: CONTINUE.md  Cargo.toml  build.rs
crates/rustploy-gui/assets/: application.manifest  rustploy.rc
crates/rustploy-gui/src/: assets.rs  embedded.rs  main.rs
crates/rustploy-gui/src/app/: mod.rs  net.rs  root.rs  rwp.rs  store.rs  wizard.rs
crates/rustploy-gui/styles/: app.gss
crates/rustploy-gui/templates/: app.kdl  app.xml  home.kdl  home.xml  login.kdl  login.xml  new_service.kdl  new_service.xml  service.kdl  service.xml  shell.kdl  shell.xml
crates/rustploy-gui/templates/components/: badge.kdl  badge.xml  loading_row.kdl  loading_row.xml  nav_item.kdl  nav_item.xml  picker_row.xml  project_card.xml  service_card.xml  stat_card.xml  state_cell.xml  tab_button.kdl  tab_button.xml  template_row.kdl  template_row.xml
crates/rustploy-gui/templates/lib/: app.luau  fmt.luau
crates/rustploy-gui/tests/: templates_render.rs
crates/rustploy-gui/views/: app.gv  app.xml  home.gv  home.xml  log_window.gv  log_window.xml  login.gv  login.xml  new_job_window.gv  new_job_window.xml  new_project_form.gv  new_project_form.xml  new_registry_token_window.gv  new_registry_token_window.xml  new_service.gv  new_service.xml  new_service_window.gv  new_service_window.xml  service.gv  service.xml  shell.gv  shell.xml
crates/rustploy-gui/views/components/: badge.xml  loading_row.gv  loading_row.xml  nav_item.gv  nav_item.xml  picker_row.xml  project_card.gv  project_card.xml  service_card.xml  stat_card.gv  stat_card.xml  state_cell.gv  state_cell.xml  tab_button.gv  tab_button.xml  template_row.gv  template_row.xml
crates/rustploy-gui/views/scripts/: app.luau  fmt.luau  fmt_dashboard.luau  fmt_git.luau  fmt_service_detail.luau  fmt_time.luau  fmt_types.luau  fmt_util.luau  glacier.d.luau  handlers_connection.luau  handlers_docker.luau  handlers_nav.luau  handlers_projects.luau  handlers_services.luau  handlers_settings.luau  handlers_stream.luau  handlers_wizard.luau  helpers.luau  log_window.luau  new_job_window.luau  new_project_window.luau  new_registry_token_window.luau  new_service_window.luau  state.luau
crates/rustploy-gui/views/styles/: app.gss
crates/shared/: Cargo.toml  build.rs
crates/shared/src/: config.rs  lib.rs  manifest.rs  models.rs  protocol.rs  wizard.rs
crates/shared/src/templates/: catalog.rs  mod.rs
(+145 files in other folders)
