[workspace]
members = [
    "crates/daemon",
    "crates/client",
    "crates/shared",
    "crates/importer",
    "crates/rustploy-gui",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# Compile heavy dependencies at opt-level 2 even in debug builds so
# that SurrealDB / bollard / ratatui don't dominate incremental rebuilds.
[profile.dev.package."*"]
opt-level = 2

# TEMP (migração 0.7): validar a GUI contra o glacier-ui local antes de publicar.
# Remover antes do commit — a dep resolve de crates.io depois do publish.
[patch.crates-io]
glacier-ui = { path = "../glacier-ui" }
