[workspace]
members = [
    "crates/daemon",
    "crates/shared",
    "crates/importer",
    "crates/rustploy-gui",
    "crates/fw-helper",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# Compile heavy dependencies at opt-level 2 even in debug builds so
# that SurrealDB / bollard don't dominate incremental rebuilds.
[profile.dev.package."*"]
opt-level = 2
