[package]
name = "client"
version = "0.1.0"
edition = "2024"
default-run = "rustploy"

[[bin]]
name = "rustploy"
path = "src/main.rs"

[package.metadata.deb]
name                 = "rustploy"
maintainer           = "Antonio Fernando <antoniofernando2723@gmail.com>"
copyright            = "2026, Antonio Fernando"
extended-description = "Rustploy TUI client — terminal interface for the Rustploy PaaS"
section              = "admin"
priority             = "optional"
depends              = "$auto, wl-clipboard | xclip | xsel"
assets = [
    ["target/release/rustploy", "usr/bin/rustploy", "755"],
]

[dependencies]
shared = { path = "../shared" }

# TUI
ratatui = "0.28"
crossterm = "0.28"
tui-textarea = { version = "0.6", features = ["crossterm"] }

# CLI
clap = { version = "4", features = ["derive"] }


# Serialization
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }

# Errors
anyhow = "1"

# Performance
mimalloc = { version = "0.1", default-features = false }

# IDs / Time
chrono = { version = "0.4", features = ["serde"] }
