[package]
name = "daemon"
version = "0.1.0"
edition = "2024"
default-run = "rustployd"

[[bin]]
name = "rustployd"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP — used by ingress proxy and deploy healthchecks, NOT for IPC
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "client", "client-legacy"] }
http-body-util = "0.1"
http = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }

# Database
surrealdb = { version = "2", features = ["kv-surrealkv"] }

# Docker
bollard = "0.17"

# Reverse proxy (hyper-based, HTTP/1.1, lock-free route table via arc-swap)
arc-swap = "1"

# TLS — Phase 5
# rustls = "0.23"
# instant-acme = "0.7"

# Crypto / Secrets
age = { version = "0.10", features = ["async"] }
hex = "0.4"

# IDs / Time
ulid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Tar/Gzip for Docker build context
tar = "0.4"
flate2 = "1"

# Errors / Logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"

# Config
toml = "0.8"

# Utilities
bytes = "1"

# Performance
mimalloc = { version = "0.1", default-features = false }
socket2 = { version = "0.5", features = ["all"] }
