[package]
name = "fw-helper"
version = "0.1.0"
edition = "2024"

# Helper privilegiado mínimo de firewall (roda como root via socket activation
# do systemd). Deliberadamente sem dependência da crate `shared`: quanto menor
# a superfície do único processo root do rustploy, melhor.
[[bin]]
name = "rustployd-fw"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
