[package]
name = "remote-client"
version = "0.1.0"
edition = "2024"
default-run = "rustploy-remote"

[[bin]]
name = "rustploy-remote"
path = "src/main.rs"

[package.metadata.deb]
name                 = "rustploy-remote"
maintainer           = "Antonio Fernando <antoniofernando2723@gmail.com>"
copyright            = "2026, Antonio Fernando"
extended-description = "Rustploy remote GUI client — graphical interface for the Rustploy PaaS"
section              = "admin"
priority             = "optional"
depends              = "$auto"
maintainer-scripts   = "../../packaging/debian-remote-client"
assets = [
    ["target/release/rustploy-remote",                                    "usr/bin/rustploy-remote",                                          "755"],
    ["../../packaging/remote-client/rustploy-remote.desktop",             "usr/share/applications/rustploy-remote.desktop",                   "644"],
    ["../../packaging/remote-client/rustploy-remote.svg",                 "usr/share/icons/hicolor/scalable/apps/rustploy-remote.svg",         "644"],
]

[dependencies]
regex = "1.x"
shared = { path = "../shared" }
strip-ansi-escapes = "0.2.1"

# GUI
iced = { version = "0.13", features = ["tokio"] }

# Async / networking (runs on iced's tokio executor)
tokio = { version = "1", features = ["net", "sync", "macros", "io-util", "rt", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }

# Errors / Time
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

# Open the system browser for the OAuth authorization flow
open = "5"
