[package]
name = "rustploy-gui"
version = "0.1.0"
edition = "2024"
default-run = "rustploy-gui"
description = "Rustploy — desktop client (glacier-ui) for the Rustploy PaaS daemon"
license = "MIT"
authors = ["Antonio Fernando <antoniofernando2723@gmail.com>"]
repository = "https://github.com/antoniofernando2723/rustploy"
keywords = ["paas", "deploy", "gui", "iced"]
categories = ["gui"]

[[bin]]
name = "rustploy-gui"
path = "src/main.rs"

[dependencies]
# Declarative UI engine (published; XML templates + async bridge + widgets).
# 0.36 traz o runner multi-janela (iced::daemon): a casca em `src/app/` é um
# runtime `iced::daemon` próprio, um `GlacierUI` por janela — ver `app/mod.rs`.
# feature `tray` (0.47+): ícone de bandeja + app que sobrevive à última janela.
# 0.48+: fechar a principal recolhe o motor headless (SSE + login vivos → as
# notificações de deploy chegam com a janela fechada). Ver app/mod.rs e
# docs/plano-tray-bandeja-e-ciclo-de-vida.md.
glacier-ui = { version = "0.50", features = ["tray"] }

# Embute a árvore de assets (views/estilos/scripts/ícones/logos) no binário em
# builds de release, para um executável standalone que não depende dos arquivos
# no disco. Ver src/embedded.rs (só compila em `cfg(not(debug_assertions))`).
include_dir = "0.7"

shared = { package = "rustploy-shared", version = "0.1.0", path = "../shared" }

# GUI — features must stay compatible with glacier-ui's iced.
iced = { version = "0.14", features = ["image", "svg", "tokio"] }

# Async / networking (runs on iced's tokio executor)
tokio = { version = "1", features = ["net", "sync", "macros", "io-util", "rt", "time"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors / Time
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
# Embeds the Windows .exe icon (via the RC tool; llvm-rc on cross builds).
embed-resource = "2.4"

# ── Debian package (cargo deb -p rustploy-gui) ───────────────────────────────────
# Installs the binary to /usr/bin, all runtime assets under /usr/share/rustploy
# preserving the `crates/…` prefix the templates reference (the app chdir's here
# at startup — see src/assets.rs), plus the .desktop entry and hicolor icons so
# the app shows up in the applications menu and the dock/taskbar.
[package.metadata.deb]
name                 = "rustploy-gui"
maintainer           = "Antonio Fernando <antoniofernando2723@gmail.com>"
copyright            = "2026, Antonio Fernando"
extended-description = "Rustploy — desktop client (glacier-ui) for the Rustploy PaaS daemon"
section              = "admin"
priority             = "optional"
# `$auto` = libs detectadas do binário (libc, etc.). O ícone de bandeja usa
# libappindicator+GTK em runtime (ver src/tray.rs na glacier), então garantimos
# as libs de sistema para o tray subir no desktop do usuário.
depends              = "$auto, libgtk-3-0, libayatana-appindicator3-1"
maintainer-scripts   = "../../packaging/rustploy-gui"
assets = [
    ["target/release/rustploy-gui", "usr/bin/rustploy-gui", "755"],

    # Os assets de runtime (views/estilos/scripts/ícones/logos) são EMBUTIDOS no
    # binário de release (ver src/embedded.rs), então não são mais copiados para
    # /usr/share — o executável é standalone. Só a integração com o desktop fica.

    # Desktop integration.
    ["../../packaging/rustploy-gui/rustploy-gui.desktop", "usr/share/applications/", "644"],
    ["../../packaging/rustploy-gui/icons/hicolor/**/*",         "usr/share/icons/hicolor/", "644"],
]
