[package]
name = "rustploy-shared"
version = "0.1.0"
edition = "2024"
description = "Shared types and protocol definitions for the Rustploy PaaS platform"
license = "MIT"
authors = ["Antonio Fernando <antoniofernando2723@gmail.com>"]
repository = "https://github.com/antoniofernando2723/rustploy"
keywords = ["paas", "deploy", "docker"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
toml = "0.8"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
serde_yaml = "0.9"
serde_json = "1"
